--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "illuminate/filesystem": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0"
     },
     "require-dev" : {
-        "orchestra/testbench": "^3.5|~4.0"
+        "orchestra/testbench": "^3.5|~4.0",
+        "mockery/mockery": "^1.2"
     },
     "autoload": {
         "psr-4": {
