--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
     ],
     "license" : "MIT",
     "require": {
-        "php" : ">=7.0",
-        "illuminate/support" : "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0",
-        "illuminate/routing": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0",
-        "illuminate/console": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0",
-        "illuminate/config": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0",
-        "illuminate/filesystem": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0"
+        "php" : ">=7.1.3",
+        "illuminate/support" : "~5.8.0|~6.0|~7.0",
+        "illuminate/routing": "~5.8.0|~6.0|~7.0",
+        "illuminate/console": "~5.8.0|~6.0|~7.0",
+        "illuminate/config": "~5.8.0|~6.0|~7.0",
+        "illuminate/filesystem": "~5.8.0|~6.0|~7.0"
     },
     "require-dev" : {
-        "orchestra/testbench": "^3.5|~4.0",
+        "orchestra/testbench": "^3.5|~4.0|~5.0",
         "mockery/mockery": "^1.2"
     },
     "autoload": {
